feat: pet image upload path
